--- a/index.scss
+++ b/index.scss
@@ -133,6 +133,7 @@ button {
 /*  */
 
 .container {
+    width: 100%;
     max-width: 1240px;
     margin-left: auto;
     margin-right: auto;
@@ -561,13 +562,24 @@ body {
         min-height: 605px;
         margin-top: 124px;
         background-image: url("./images/backgrounds/time-in-it.png");
-        background-size: 100vw 100%;
+        background-size: 100vw 605px;
         background-repeat: no-repeat;
         display: flex;
         align-items: center;
 
         @media (max-width: 960px) {
-            min-height: 960px;
+            margin-top: 60px;
+            background-size: 100vw 672px;
+            align-items: start;
+            padding-top: 168px;
+        }
+        @media (max-width: 480px) {
+            margin-top: 40px;
+            background-size: 100vw 640px;
+            padding-top: 159px;
+        }
+        @media (max-width: 360px) {
+            background-size: 100vw 797px;
         }
 
         .title {
@@ -578,8 +590,28 @@ body {
         .achievements {
             margin-top: 118px;
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            justify-content: space-between;
+            grid-template-columns: repeat(4, auto);
+            gap: 10px;
+
+            @media (max-width: 960px) {
+                max-width: 575px;
+                margin-top: 98px;
+                margin-left: auto;
+                margin-right: auto;
+                grid-template-columns: auto auto;
+                gap: 88px;
+            }
+            @media (max-width: 600px) {
+                gap: 60px 26px;
+            }
+            @media (max-width: 480px) {
+                margin-top: 60px;
+            }
+            @media (max-width: 360px) {
+                gap: 40px;
+                grid-template-columns: 210px;
+                justify-content: center;
+            }
 
             .item {
                 display: flex;
@@ -601,6 +633,10 @@ body {
                     font-weight: 500;
                     line-height: 16px;
                     text-wrap: nowrap;
+
+                    @media (max-width: 600px) {
+                        text-wrap: wrap;
+                    }
                 }
             }
         }
