--- a/index.css
+++ b/index.css
@@ -576,21 +576,22 @@ body .time-in-it {
 @media (max-width: 960px) {
   body .time-in-it {
     margin-top: 60px;
-    background-size: 100vw 672px;
+    background-size: 100vw 100%;
     align-items: start;
     padding-top: 168px;
+    padding-bottom: 174px;
   }
 }
 @media (max-width: 480px) {
   body .time-in-it {
     margin-top: 40px;
-    background-size: 100vw 640px;
+    padding-bottom: 206px;
     padding-top: 159px;
   }
 }
 @media (max-width: 360px) {
   body .time-in-it {
-    background-size: 100vw 797px;
+    padding-bottom: 182px;
   }
 }
 body .time-in-it .title {
@@ -667,11 +668,49 @@ body .join-us .jobs {
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
 }
+@media (max-width: 960px) {
+  body .join-us .jobs {
+    margin-top: 76px;
+    grid-template-columns: minmax(200px, 350px) minmax(200px, 350px);
+    justify-content: center;
+  }
+}
+@media (max-width: 480px) {
+  body .join-us .jobs {
+    grid-template-columns: 1fr;
+  }
+}
 body .join-us .jobs div {
   color: var(--color-blue);
   box-shadow: var(--shadow-secondary);
   padding: 17px;
   border-radius: var(--radius-sm);
+}
+@media (max-width: 960px) {
+  body .join-us .jobs div {
+    width: 100%;
+    max-width: 350px;
+  }
+}
+@media (max-width: 960px) and (max-width: 480px) {
+  body .join-us .jobs div {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 960px) {
+  body .join-us .jobs div:last-child {
+    grid-column-start: -3;
+    grid-column-end: -1;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 960px) and (max-width: 480px) {
+  body .join-us .jobs div:last-child {
+    grid-column-start: auto;
+    grid-column-end: auto;
+  }
 }
 body footer {
   min-height: 764px;
