--- a/index.scss
+++ b/index.scss
@@ -179,7 +179,7 @@ body {
     color: $color-black;
     background-image: url("./images/backgrounds/main.png");
     background-repeat: no-repeat;
-    background-size: 100vw 740px;
+    background-size: 100vw 746px;
 
     @media (max-width: $breakpoint-960) {
         background-size: 100vw 584px;
@@ -284,6 +284,15 @@ body {
         position: relative;
 
         .left-column {
+            min-height: 656px;
+
+            @media (max-width: $breakpoint-960) {
+                min-height: 456px;
+            }
+            @media (max-width: $breakpoint-768) {
+                min-height: 456px;
+            }
+
             h1 {
                 max-width: 803px;
 
@@ -318,13 +327,12 @@ body {
             @media (max-width: $breakpoint-768) {
                 max-width: 347px;
                 top: auto;
-                bottom: -136px;
+                bottom: 0;
             }
             @media (max-width: $breakpoint-480) {
                 max-width: 264px;
-            }
-            @media (max-width: $breakpoint-360) {
-                bottom: -183px;
+                right: 20px;
+                bottom: 61px;
             }
         }
     }
@@ -332,25 +340,18 @@ body {
     /*  */
 
     .services {
-        margin-top: 230px;
+        margin-top: 24px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 50px;
 
         @media (max-width: $breakpoint-960) {
-            margin-top: 160px;
             max-width: 760px;
             grid-template-columns: 1fr 1fr;
         }
-        @media (max-width: $breakpoint-768) {
-            margin-top: 181px;
-        }
         @media (max-width: $breakpoint-480) {
-            margin-top: 248px;
+            margin-top: 40px;
             grid-template-columns: 1fr;
-        }
-        @media (max-width: 320px) {
-            margin-top: 284px;
         }
 
         article {
